// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ToggleStatsProvider > should match snapshot 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="flex flex-col gap-2"
      >
        <div
          class="flex items-center gap-2"
        >
          <p>
            Stats provider
          </p>
          <button
            data-state="closed"
          >
            <svg
              fill="none"
              height="1em"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
              <path
                d="M12 16v-4"
              />
              <path
                d="M12 8h.01"
              />
            </svg>
          </button>
        </div>
        <button
          data-state="closed"
        >
          <div
            class="flex items-center gap-1 justify-start text-white"
            dir="ltr"
            role="group"
            style="outline: none;"
            tabindex="0"
          >
            <a
              aria-checked="true"
              aria-disabled="false"
              class="inline-flex items-center justify-center rounded-md text-sm font-medium transition-colors hover:bg-accent/60 hover:text-accent-foreground focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 data-[state=on]:bg-accent data-[state=on]:text-accent-foreground bg-transparent h-9 px-3 cursor-pointer"
              data-radix-collection-item=""
              data-state="on"
              href="/profile/id?stats-provider=spotify"
              role="radio"
              tabindex="-1"
              type="button"
            >
              Spotify
            </a>
            <a
              aria-checked="false"
              aria-disabled="false"
              class="inline-flex items-center justify-center rounded-md text-sm font-medium transition-colors hover:bg-accent/60 hover:text-accent-foreground focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 data-[state=on]:bg-accent data-[state=on]:text-accent-foreground bg-transparent h-9 px-3 cursor-pointer"
              data-radix-collection-item=""
              data-state="off"
              href="/profile/id?stats-provider=rigtch"
              role="radio"
              tabindex="-1"
              type="button"
            >
              rigtch.fm
            </a>
          </div>
        </button>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="flex flex-col gap-2"
    >
      <div
        class="flex items-center gap-2"
      >
        <p>
          Stats provider
        </p>
        <button
          data-state="closed"
        >
          <svg
            fill="none"
            height="1em"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <path
              d="M12 16v-4"
            />
            <path
              d="M12 8h.01"
            />
          </svg>
        </button>
      </div>
      <button
        data-state="closed"
      >
        <div
          class="flex items-center gap-1 justify-start text-white"
          dir="ltr"
          role="group"
          style="outline: none;"
          tabindex="0"
        >
          <a
            aria-checked="true"
            aria-disabled="false"
            class="inline-flex items-center justify-center rounded-md text-sm font-medium transition-colors hover:bg-accent/60 hover:text-accent-foreground focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 data-[state=on]:bg-accent data-[state=on]:text-accent-foreground bg-transparent h-9 px-3 cursor-pointer"
            data-radix-collection-item=""
            data-state="on"
            href="/profile/id?stats-provider=spotify"
            role="radio"
            tabindex="-1"
            type="button"
          >
            Spotify
          </a>
          <a
            aria-checked="false"
            aria-disabled="false"
            class="inline-flex items-center justify-center rounded-md text-sm font-medium transition-colors hover:bg-accent/60 hover:text-accent-foreground focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 data-[state=on]:bg-accent data-[state=on]:text-accent-foreground bg-transparent h-9 px-3 cursor-pointer"
            data-radix-collection-item=""
            data-state="off"
            href="/profile/id?stats-provider=rigtch"
            role="radio"
            tabindex="-1"
            type="button"
          >
            rigtch.fm
          </a>
        </div>
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`ToggleStatsProvider > should match snapshot as disabled 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="flex flex-col gap-2"
      >
        <div
          class="flex items-center gap-2"
        >
          <p>
            Stats provider
          </p>
          <button
            data-state="closed"
          >
            <svg
              fill="none"
              height="1em"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
              <path
                d="M12 16v-4"
              />
              <path
                d="M12 8h.01"
              />
            </svg>
          </button>
        </div>
        <button
          data-state="closed"
        >
          <div
            class="flex items-center gap-1 opacity-50 justify-start text-white"
            dir="ltr"
            role="group"
            style="outline: none;"
            tabindex="-1"
          >
            <a
              aria-checked="true"
              aria-disabled="true"
              class="inline-flex items-center justify-center rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 data-[state=on]:bg-accent data-[state=on]:text-accent-foreground bg-transparent h-9 px-3 cursor-not-allowed hover:bg-transparent hover:text-white"
              data-disabled=""
              data-radix-collection-item=""
              data-state="on"
              disabled=""
              href="/profile/id?stats-provider=spotify"
              role="radio"
              tabindex="-1"
              type="button"
            >
              Spotify
            </a>
            <a
              aria-checked="false"
              aria-disabled="true"
              class="inline-flex items-center justify-center rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 data-[state=on]:bg-accent data-[state=on]:text-accent-foreground bg-transparent h-9 px-3 cursor-not-allowed hover:bg-transparent hover:text-white"
              data-disabled=""
              data-radix-collection-item=""
              data-state="off"
              disabled=""
              href="/profile/id?stats-provider=rigtch"
              role="radio"
              tabindex="-1"
              type="button"
            >
              rigtch.fm
            </a>
          </div>
        </button>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="flex flex-col gap-2"
    >
      <div
        class="flex items-center gap-2"
      >
        <p>
          Stats provider
        </p>
        <button
          data-state="closed"
        >
          <svg
            fill="none"
            height="1em"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <path
              d="M12 16v-4"
            />
            <path
              d="M12 8h.01"
            />
          </svg>
        </button>
      </div>
      <button
        data-state="closed"
      >
        <div
          class="flex items-center gap-1 opacity-50 justify-start text-white"
          dir="ltr"
          role="group"
          style="outline: none;"
          tabindex="-1"
        >
          <a
            aria-checked="true"
            aria-disabled="true"
            class="inline-flex items-center justify-center rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 data-[state=on]:bg-accent data-[state=on]:text-accent-foreground bg-transparent h-9 px-3 cursor-not-allowed hover:bg-transparent hover:text-white"
            data-disabled=""
            data-radix-collection-item=""
            data-state="on"
            disabled=""
            href="/profile/id?stats-provider=spotify"
            role="radio"
            tabindex="-1"
            type="button"
          >
            Spotify
          </a>
          <a
            aria-checked="false"
            aria-disabled="true"
            class="inline-flex items-center justify-center rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 data-[state=on]:bg-accent data-[state=on]:text-accent-foreground bg-transparent h-9 px-3 cursor-not-allowed hover:bg-transparent hover:text-white"
            data-disabled=""
            data-radix-collection-item=""
            data-state="off"
            disabled=""
            href="/profile/id?stats-provider=rigtch"
            role="radio"
            tabindex="-1"
            type="button"
          >
            rigtch.fm
          </a>
        </div>
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
